<resources>
    <string name="app_name">51学车</string>
    <string name="home">首页</string>
    <string name="trainee">学员</string>
    <string name="my">我的</string>
    <string name="learn_car">五一学车</string>
    <string name="logout">注销</string>
    <string name="trainee_title">我的学员</string>
    <string name="my_title">我的</string>
    <string name="free_change_coach">无理由免费换教练</string>
    <string name="share_three_liability_insurance">报名就享100万的三责险</string>
    <string name="name">名字</string>
    <string name="phone_number">18817772786</string>
    <string name="modify_password">密码修改</string>
    <string name="my_detail">我的详情</string>
    <string name="service_road">服务路段</string>
    <string name="my_wallet">我的钱包</string>
    <string name="advice_feedback">意见反馈</string>
    <string name="customer_care">客服热线</string>
    <string name="number_customer_care">4008-090-525</string>
    <string name="look_through">正在审核中...</string>
    <string name="edit_head_photo">编辑头像</string>
    <string name="name_detail">姓名</string>
    <string name="name_register">蛋疼</string>
    <string name="sex_detail">性别</string>
    <string name="sex">男</string>
    <string name="drive_age">驾龄</string>
    <string name="contact_phone">联系电话</string>
    <string name="phone_contact">188***2486</string>
    <string name="drive_age_number">20</string>
    <string name="birth_date">出生日期</string>
    <string name="height_weight">身高体重</string>
    <string name="ancestral_homeland">祖籍</string>
    <string name="introduction">其他介绍</string>
    <string name="driving_license">驾驶证</string>
    <string name="teacher_certificate">教员证</string>
    <string name="car_license">车牌号</string>
    <string name="car_license_detail">你猜</string>
    <string name="input_password_old">请输入原密码</string>
    <string name="password_length_type">密码为6~12位,字母或数字</string>
    <string name="please_again_password">请再次输入密码</string>
    <string name="edit_service_road">编辑</string>
    <string name="address_tv_location_automatic">上海市杨浦区营口路588号</string>
    <string name="total_money">总金额(元)</string>
    <string name="money">1000</string>
    <string name="no_money_tv">革命尚未成功,同志仍需努力,赶快去接单吧</string>
    <string name="advice_hint">请留下您的宝贵意见和建议,我们将努力改进.</string>
    <string name="phone_number_advice">请留下手机号码，以使我们回复您</string>
    <string name="name_dialog_tv">姓名:</string>
    <string name="modify_information">修改信息</string>
    <string name="ok_tv">确定</string>
    <string name="cancel_tv">取消</string>
    <string name="sex_dialog">性别:</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="upload_photo_tv">请上传照片</string>
    <string name="drive_age_et">驾龄:</string>
    <string name="height">身高:</string>
    <string name="weight">体重:</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="introduction_myself">用一句话介绍自己</string>
</resources>
