<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@id/tv_name_dialog"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="#fff"
        android:text="@string/modify_information" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@id/tv_name"
            android:textColor="#333"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:text="@string/sex_dialog"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@id/rg_select_sex"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginStart="25dp">
           <RadioButton
            android:layout_width="wrap_content"
            android:id="@id/man_sex"
            android:text="@string/man"
            android:textSize="18sp"
               android:checked="true"
            android:layout_height="wrap_content" />
            <RadioButton
                android:layout_width="wrap_content"
                android:id="@id/woman_sex"
                android:text="@string/woman"
                android:textSize="18sp"
                android:layout_marginStart="90dp"
                android:layout_height="wrap_content" />

        </RadioGroup>

    </LinearLayout>

</LinearLayout>