<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@id/tv_name_dialog"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="#fff"
        android:text="@string/modify_information" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">
            <TextView
                android:id="@id/tv_height"
                android:textColor="#333"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:text="@string/height"/>
            <EditText
                android:id="@id/et_height_number"
                android:layout_width="60dp"
                android:layout_toEndOf="@id/tv_height"
                android:layout_marginStart="3dp"
                android:inputType="number"
                android:maxLength="3"
                android:textColor="#333"
                android:layout_centerVertical="true"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="#333"
                android:layout_toEndOf="@id/et_height_number"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/cm"/>


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">
            <TextView
                android:id="@id/tv_height"
                android:textColor="#333"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:text="@string/weight"/>
            <EditText
                android:id="@id/et_weight_number"
                android:layout_width="60dp"
                android:layout_toEndOf="@id/tv_height"
                android:layout_marginStart="3dp"
                android:inputType="number"
                android:maxLength="3"
                android:textColor="#333"
                android:layout_centerVertical="true"
                android:textSize="16sp"
                android:text=""
                android:gravity="center"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="#333"
                android:layout_toEndOf="@id/et_weight_number"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/kg"/>


        </RelativeLayout>


    </LinearLayout>

</LinearLayout>