<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ddd">

    <RelativeLayout
        android:id="@id/rl_my_wallet_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:id="@id/back_left_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:src="@drawable/back_left_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/my_wallet"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <ImageView
            android:id="@id/iv_three_line"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:src="@drawable/three_line" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@id/rl_total_money"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_below="@id/rl_my_wallet_title"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:text="@string/total_money"
            android:textColor="#fff"
            android:textSize="24sp" />

        <TextView
            android:id="@id/detail_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/money"
            android:textColor="#fff"
            android:textSize="24sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_total_money">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="#ffffff">

            <ImageView
                android:id="@id/iv_no_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/no_money" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/iv_no_money"
                android:text="@string/no_money_tv"
                android:textColor="#555"
                android:layout_marginTop="10dp"
                android:textSize="18sp" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
