<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ddd"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimaryDark"
        >
        <ImageView
            android:id="@id/back_left_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:src="@drawable/back_left_white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:textColor="#fff"
            android:textSize="18sp"
            android:layout_centerInParent="true"
            android:text="@string/my_detail"/>


    </RelativeLayout>
    <RelativeLayout
        android:id="@id/rl_edit_head_photo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimaryDark">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="14sp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/edit_head_photo"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@id/head_portrait"
            android:layout_alignParentEnd="true"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="40dp"
            android:layout_centerVertical="true"
            android:src="@drawable/head_portrait"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_right_white"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
   >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@id/rl_name_detail"
            android:layout_width="match_parent"
            android:background="#fff"
            android:layout_height="48dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#555"
                android:textSize="14sp"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:text="@string/name_detail"/>
            <TextView
                android:id="@id/name_register_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:layout_centerVertical="true"
                android:text="@string/name_register"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:layout_centerVertical="true"
                android:src="@drawable/back_right_black"/>

        </RelativeLayout>
        <RelativeLayout
            android:id="@id/rl_sex_detail"
            android:layout_width="match_parent"
            android:background="#fff"
            android:layout_marginTop="1dp"
            android:layout_height="48dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#555"
                android:textSize="14sp"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:text="@string/sex_detail"/>
            <TextView
                android:id="@id/sex_register_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:layout_centerVertical="true"
                android:text="@string/sex"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:layout_centerVertical="true"
                android:src="@drawable/back_right_black"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@id/rl_drive_age_detail"
            android:layout_width="match_parent"
            android:background="#fff"
            android:layout_marginTop="1dp"
            android:layout_height="48dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#555"
                android:textSize="14sp"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:text="@string/drive_age"/>
            <TextView
                android:id="@id/drive_register_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:layout_centerVertical="true"
                android:text="@string/drive_age_number"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:layout_centerVertical="true"
                android:src="@drawable/back_right_black"/>
        </RelativeLayout>
        <RelativeLayout
        android:id="@id/rl_contact_phone_detail"
        android:layout_width="match_parent"
        android:background="#fff"
        android:layout_marginTop="8dp"
        android:layout_height="48dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#555"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:text="@string/contact_phone"/>
        <TextView
            android:id="@id/contact_phone_register_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:layout_centerVertical="true"
            android:text="@string/phone_contact"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:layout_centerVertical="true"
            android:src="@drawable/back_right_black"/>
    </RelativeLayout>
        <RelativeLayout
            android:id="@id/rl_birth_calendar_detail"
            android:layout_width="match_parent"
            android:background="#fff"
            android:layout_marginTop="1dp"
            android:layout_height="48dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#555"
                android:textSize="14sp"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:text="@string/birth_date"/>
            <TextView
                android:id="@id/birth_date_register_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_centerVertical="true"
                android:text=""/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:layout_centerVertical="true"
                android:src="@drawable/back_right_black"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@id/rl_height_weight_detail"
            android:layout_width="match_parent"
            android:background="#fff"
            android:layout_marginTop="1dp"
            android:layout_height="48dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#555"
                android:textSize="14sp"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:text="@string/height_weight"/>
            <TextView
                android:id="@id/height_weight_register_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:layout_centerVertical="true"
                android:text=""/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:layout_centerVertical="true"
                android:src="@drawable/back_right_black"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@id/rl_ancestral_homeland_detail"
            android:layout_width="match_parent"
            android:background="#fff"
            android:layout_marginTop="1dp"
            android:layout_height="48dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#555"
                android:textSize="14sp"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:text="@string/ancestral_homeland"/>
            <TextView
                android:id="@id/ancestral_homeland_register_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:layout_centerVertical="true"
                android:text=""/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:layout_centerVertical="true"
                android:src="@drawable/back_right_black"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@id/rl_introduction_detail"
            android:layout_width="match_parent"
            android:background="#fff"
            android:layout_marginTop="1dp"
            android:layout_height="48dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#555"
                android:textSize="14sp"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:text="@string/introduction"/>
            <TextView
                android:id="@id/introduction_register_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:layout_centerVertical="true"
                android:text=""/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:layout_centerVertical="true"
                android:src="@drawable/back_right_black"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@id/rl_driving_license_detail"
            android:layout_width="match_parent"
            android:background="#fff"
            android:layout_marginTop="8dp"
            android:layout_height="48dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#555"
                android:textSize="14sp"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:text="@string/driving_license"/>
            <TextView
                android:id="@id/driving_license_register_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:layout_centerVertical="true"
                android:text=""/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:layout_centerVertical="true"
                android:src="@drawable/back_right_black"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@id/rl_teacher_certificate_detail"
            android:layout_width="match_parent"
            android:background="#fff"
            android:layout_marginTop="1dp"
            android:layout_height="48dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#555"
                android:textSize="14sp"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:text="@string/teacher_certificate"/>
            <TextView
                android:id="@id/teacher_certificate_register_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:layout_centerVertical="true"
                android:text=""/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:layout_centerVertical="true"
                android:src="@drawable/back_right_black"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@id/rl_car_license_detail"
            android:layout_width="match_parent"
            android:background="#fff"
            android:layout_marginTop="1dp"
            android:layout_height="48dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#555"
                android:textSize="14sp"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:text="@string/car_license"/>
            <TextView
                android:id="@id/car_license_register_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:layout_centerVertical="true"
                android:text=""/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:layout_centerVertical="true"
                android:src="@drawable/back_right_black"/>


        </RelativeLayout>
        <RelativeLayout
            android:id="@id/rl_my_photo_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff"
            android:layout_marginTop="8dp">
            <TextView
                android:id="@id/upload_photo_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:text="我的相册(长按编辑图片)"/>
            <ImageView
                android:id="@id/iv_photo_upload"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="5dp"
                android:layout_below="@id/upload_photo_three"
                android:src="@drawable/upload_photo"/>

        </RelativeLayout>
    </LinearLayout>

</ScrollView>

</LinearLayout>
