<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ddd">
    <RelativeLayout
        android:id="@id/rl_my_wallet_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:id="@id/back_left_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:src="@drawable/back_left_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/advice_feedback"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_marginTop="12dp"
            android:background="#fff">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:hint="@string/advice_hint"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#fff"
            android:layout_marginTop="20dp">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:hint="@string/phone_number_advice"
                android:inputType="phone"
                android:background="@null"/>

        </RelativeLayout>
<Button
    android:id="@id/feedback_bt"
    android:layout_width="90dp"
    android:layout_height="40dp"
    android:layout_marginTop="20dp"
    android:text="立即反馈"
    android:textColor="#fff"
    android:textSize="15sp"
    android:layout_marginStart="10dp"
    android:background="@drawable/shape_orange"/>




</LinearLayout>
