<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_height="@dimen/activity_bottom_height"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@id/home"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:id="@id/iv_home"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/home_blue"/>
            <TextView
                android:id="@id/tv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/bottom_text_style"
                android:text="@string/home"/>

        </LinearLayout>
        <LinearLayout
            android:id="@id/trainee"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:id="@id/iv_trainee"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/trainee_gray"/>
            <TextView
                android:id="@id/tv_trainee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/bottom_text_gray_style"
                android:text="@string/trainee"/>

        </LinearLayout>
        <LinearLayout
            android:id="@id/my"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:id="@id/iv_my"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/my_gray"/>
            <TextView
                android:id="@id/tv_my"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/bottom_text_gray_style"
                android:text="@string/my"/>
        </LinearLayout>
    </LinearLayout>
</merge>